# pyo3-python-tracing-subscriber

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
demo/: README.md
demo/demo-py-project/: main.py  requirements.in
demo/demo-rust-extension/: Cargo.toml  pyproject.toml
demo/demo-rust-extension/python/demo_rust_extension/: __init__.py  demo.py  demo.pyi
demo/demo-rust-extension/src/: lib.rs
demo/demo-sentry-project/: main.py  requirements.in
scripts/: bump-version.sh
src/: lib.rs
